# SIGA-nli

./: .gitignore  README.md
data/: README.md  raw_numerical_data.csv  test_id_dataset.csv  test_id_dataset.json  test_ood_dataset.csv  test_ood_dataset.json  train_dataset.csv  train_dataset.json
experiments/: README.md  cli.py  pyproject.toml
experiments/siga_nli/: __init__.py  config.py  evaluate.py  train.py
experiments/siga_nli/data/: dataloader.py  processing.py
experiments/siga_nli/training/: initializers.py  pipeline.py
